fix cards and h2 font sizes on mobile

--- a/styles.css
+++ b/styles.css
@@ -1524,7 +1524,7 @@ nav {
   }
 
   h2 {
-    font-size: 14px;
+    padding-bottom: 10px;
     line-height: 16px;
   }
 
@@ -1644,7 +1644,25 @@ nav {
     font-size: 10px !important;
   }
 }
+.cards-container {
+  flex-direction: column;
 
+  .card + .card {
+    margin-left: 0;
+    margin-top: 20px;
+  }
+
+  .card {
+    justify-content: flex-start;
+    padding-left: 30px;
+  }
+}
+
+.banner-section {
+  .banner-content {
+    padding: 25px;
+  }
+}
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   h1 {
     font-size: 32px;
